# rdkafka2-sys

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CURL_FIX.md  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  NOTICE  README.md  build.rs  cliff.toml  librdkafka-curl-fix.patch  rustfmt.toml
.github/workflows/: build.yml  main.yml  tag.yml
playground/: CMakeLists.txt  docker-compose.yml
playground/admin_client/: kafka-util.h  main.c  signal_completion.h
playground/async_producer/: kafka-util.h  main.c  message.h
playground/producer/: main.c
src/: bindings.rs  helpers.rs  lib.rs  types.rs
tests/: version_check.rs
