[package]
name = "rdkafka2-sys"
version = "0.1.0+2.8.0"
links = "rdkafka"
repository = "https://github.com/amountainram/rdkafka2-sys"
keywords = ["kafka", "rdkafka"]
description = "Native bindings to the librdkafka library"
categories = ["external-ffi-bindings"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
include = [
    "build.rs",
    "/src",
    "/librdkafka",
    "LICENSE",
    "LICENSE-librdkafka",
    "NOTICE",
]

[dependencies]
curl-sys = { version = "0.4", optional = true }
libz-sys = { version = "1", optional = true }
libc = "0.2"
lz4-sys = { version = "1", optional = true }
num_enum = "0.7"
openssl-sys = { version = "0.9", optional = true }
sasl2-sys = { version = "0.1", optional = true }
zstd-sys = { version = "2", optional = true }

[build-dependencies]
bindgen = "0.71.1"
cmake = { version = "0.1.54", optional = true }
pkg-config = "0.3.32"
regex = "1.11.1"

[features]
default = ["libz", "cmake-build"]

# Build librdkafka with its CMake build system, rather than its default "mklove"
# build system. This feature requires that the system has CMake installed.
cmake-build = ["cmake"]

# Dynamically link the system's librdkafka, rather than building and linking the
# bundled version statically. This feature requires that the system has
# librdkafka installed somewhere where pkg-config can find it.
dynamic-linking = []

# Enable SSL support.
ssl = ["openssl-sys"]

# Build and link against the version of OpenSSL bundled with the openssl-sys
# crate.
ssl-vendored = ["ssl", "openssl-sys/vendored"]

# Enable SASL GSSAPI support with Cyrus libsasl2.
gssapi = ["ssl", "sasl2-sys"]

# Build and link against the libsasl2 bundled with the sasl2-sys crate.
gssapi-vendored = ["gssapi", "sasl2-sys/gssapi-vendored"]

# Deprecated alias for the `gssapi` feature.
sasl = ["gssapi"]

# Enable support for libz compression.
libz = ["libz-sys"]

# Link against the version of libz bundled with the libz-sys crate, rather than
# the system's version.
libz-static = ["libz", "libz-sys/static"]

# Enable support for HTTP client via curl.
curl = ["curl-sys"]

# Link against the version of curl bundled with the curl-sys crate, rather than
# the system's version.
curl-static = ["curl-sys/static-curl"]

# Enable support for zstd compression.
zstd = ["zstd-sys"]

# Link against the system's version of libzstd, rather than the version bundled
# with the zstd-sys crate.
zstd-pkg-config = ["zstd", "zstd-sys/pkg-config"]

# Link against the lz4 compression library that is bundled with the lz4-sys
# crate. By default, librdkafka builds and statically links against its own
# bundled copy of lz4.
external-lz4 = ["lz4-sys"]

[package.metadata.docs.rs]
# docs.rs doesn't allow writing to ~/.cargo/registry (reasonably), so we have to
# use the CMake build for a proper out-of-tree build.
features = ["cmake-build"]

[package.metadata.release]
pre-release-hook = [
    "git",
    "cliff",
    "-o",
    "CHANGELOG.md",
    "--bump",
    "--tag",
    "v{{version}}",
    "--tag-pattern",
    "v[0-9]+\\.[0-9]+\\.[0-9]+\\+v[0-9]+\\.[0-9]+\\.[0-9]+$",
]
pre-release-commit-message = "'rdkafka2-sys' tagged to version '{{version}}'"
push = false
publish = false
tag-message = "'rdkafka2-sys' tag '{{version}}'"
tag-name = "v{{version}}"
